Fix overflow issue

--- a/src/container/Sidenav/Sidenav.scss
+++ b/src/container/Sidenav/Sidenav.scss
@@ -5,6 +5,7 @@
   min-height: 100vh;
   padding: 32px 0;
   width: 256px;
+  box-sizing: border-box;
 
   .title {
     @include set-typeface('Lato-Bold');
